# tapir-game-tools

./: Cargo.toml  README.md  justfile
crates/tapir-script/compiler/: Cargo.toml
crates/tapir-script/compiler/src/: ast.rs  builtins.rs  compile.rs  grammar.lalrpop  grammar_test.rs  lexer.rs  lib.rs  reporting.rs  tokens.rs  types.rs
crates/tapir-script/compiler/src/ast/: metadata.rs  pretty_printer.rs  visitor.rs
crates/tapir-script/compiler/src/compile/: analyse.rs  constant_propagation_visitor.rs  disassemble.rs  ir.rs  loop_visitor.rs  optimisations.rs  references.rs  symtab_visitor.rs  type_visitor.rs
crates/tapir-script/compiler/src/reporting/: format.rs
crates/tapir-script/compiler/src/snapshots/: compiler__compile__test__compiler_snapshot_tests@extern_call_basic.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_in_loop.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_mixed_with_fn.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_multiple_externs.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_statement.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_with_args.tapir.snap  compiler__compile__test__compiler_snapshot_tests@factorial_recursive.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fix_mul_div_promotion.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fn_call_many_returns.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fn_call_one_return.tapir.snap  compiler__compile__test__compiler_snapshot_tests@globals.tapir.snap  compiler__compile__test__compiler_snapshot_tests@if_basic.tapir.snap  compiler__compile__test__compiler_snapshot_tests@if_local_variable.tapir.snap  compiler__compile__test__compiler_snapshot_tests@large_value_push32.tapir.snap  compiler__compile__test__compiler_snapshot_tests@loop_break1.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_extern.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_function.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_paired.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_swap.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_use_values.tapir.snap  compiler__compile__test__compiler_snapshot_tests@multi_assign_with_prop.tapir.snap  compiler__compile__test__compiler_snapshot_tests@optimise_division_by_subtraction.tapir.snap  compiler__compile__test__compiler_snapshot_tests@properties.tapir.snap  compiler__compile__test__compiler_snapshot_tests@really_basic_call.tapir.snap  compiler__compile__test__compiler_snapshot_tests@regalloc_loop.tapir.snap  compiler__compile__test__compiler_snapshot_tests@spawn.tapir.snap  compiler__compile__test__compiler_snapshot_tests@spawn2.tapir.snap  compiler__compile__test__compiler_snapshot_tests@then.tapir.snap  compiler__compile__test__compiler_snapshot_tests@variables.tapir.snap  compiler__compile__test__compiler_snapshot_tests@wait.tapir.snap  compiler__grammar_test__snapshot_failures@big_number.tapir.snap  compiler__grammar_test__snapshot_failures@extern_fn_with_block.tapir.snap  compiler__grammar_test__snapshot_failures@functions.tapir.snap  compiler__grammar_test__snapshot_failures@mulitple_errors.tapir.snap  compiler__grammar_test__snapshot_failures@non_associative_comparison.tapir.snap  compiler__grammar_test__snapshot_failures@unexpected_eof.tapir.snap  compiler__grammar_test__snapshot_success@binary_operators.tapir.snap  compiler__grammar_test__snapshot_success@block.tapir.snap  compiler__grammar_test__snapshot_success@event_fn.tapir.snap  compiler__grammar_test__snapshot_success@extern_functions.tapir.snap  (+20 more)
crates/tapir-script/vm/: Cargo.toml
crates/tapir-script/vm/src/: lib.rs  state.rs
crates/tapir-script/vm/src/snapshots/: vm__test__stack_snapshot_tests@comparison_ops.tapir.snap  vm__test__stack_snapshot_tests@conditional_not_taken.tapir.snap  vm__test__stack_snapshot_tests@conditional_taken.tapir.snap  vm__test__stack_snapshot_tests@functions__call.tapir.snap  vm__test__stack_snapshot_tests@functions__call_complex.tapir.snap  vm__test__stack_snapshot_tests@functions__call_statement.tapir.snap  (+16 more)
crates/tapir-sounds/: Cargo.toml
crates/tapir-sounds-state/: Cargo.toml
crates/tapir-sounds-state/src/: blocks.rs  calculate.rs  lib.rs  persistance.rs
crates/tapir-sounds-state/src/blocks/: amplify.rs  band_pass_filter.rs  combine.rs  cross_fade.rs  cut.rs  dc_offset.rs  delay.rs  fade.rs  fundamental_shape.rs  noise.rs  pitch_shift.rs  recording.rs  repeat.rs  square.rs
crates/tapir-sounds/examples/: bass_drum.tapir_sound  hi_hat.tapir_sound  instruments.tapir_sound  strings.tapir_sound  synth.tapir_sound
crates/tapir-sounds/src/: app.rs  audio.rs  main.rs  midi.rs  save_load.rs  sound_io.rs  widget.rs
crates/tapir-sounds/src/widget/: block.rs  cable_state.rs  input.rs  midi_combo_box.rs  open_save.rs  port.rs
(+547 files in other folders)
