[workspace]

resolver = "2"

members = [
    "crates/tapir-sounds",
    "crates/tapir-sounds-state",
    "crates/tapir-cables",
    "crates/tapir-undo",

    "crates/tapir-tracker", "crates/tapir-script/compiler", "crates/tapir-script/vm", "crates/tapir-script/bytecode", "crates/tapir-script/tapir-script-macros", "crates/tapir-script/tapir-script",
]
