[package]
name = "tapir-sounds-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0"
im = "15"
petgraph = "0.6"
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
