[package]
name = "tapir-sounds-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0"
im = "15"
petgraph = "0.6"
realfft = "3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
