[package]
name = "tapir-sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tapir-cables = { path = "../tapir-cables" }
tapir-sounds-state = { path = "../tapir-sounds-state" }

anyhow = "1.0"
arc-swap = "1.6.0"
catppuccin-egui = "3.0"
eframe = "0.22"
egui-notify = "0.7"
egui_file = "0.10"
env_logger = "0.10"
hound = "3.5"
midir = "0.9"
midly = { version = "0.5", default-features = false, features = ["std"] }
ron = "0.8"
tinyaudio = "0.1"
