[package]
name = "tapir-sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tapir-cables = { path = "../tapir-cables" }
tapir-sounds-state = { path = "../tapir-sounds-state" }
tapir-undo = { path = "../tapir-undo" }

anyhow = "1.0"
arc-swap = "1.6.0"
cpal = "0.15"

egui = "0.27"
egui_plot = "0.27"
eframe = "0.27"
egui-notify = "0.14"
egui_file = "0.17"
catppuccin-egui = { version = "5.1", default-features = false, features = [
    "egui27",
] }

env_logger = "0.10"
hound = "3.5"
midir = "0.9"
midly = { version = "0.5", default-features = false, features = ["std"] }
ron = "0.8"
