[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
agb_fixnum = "0.21.0"
ariadne = "0.4.1"
lalrpop-util = "0.21.0"
logos = "0.14.2"
num-traits = "0.2.19"
serde = { version = "1.0.210", features = ["derive"] }

bytecode = { path = "../bytecode" }
petgraph = "0.6.5"

[dev-dependencies]
insta = { version = "1.40.0", features = ["ron", "glob", "redactions"] }

[build-dependencies]
lalrpop = "0.21.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
